Correción de ortografía y parte de la funcionalidad de registro y login con localStorage

--- a/registroUsuario.html
+++ b/registroUsuario.html
@@ -31,7 +31,7 @@
             <!--=================== Formulario de registro ===============-->
 
             <div class="columna colForm">
-                <h1 style="text-align: center;">Registro de usuario</h1>
+                <h1 style="text-align: center;">¡Regístrate!</h1>
 
                 <form class="needs-validation" id="form">
 
@@ -107,7 +107,7 @@
                     <!-- Contraseña -->
                     <div class="mb-5">
                         <div class="d-flex">
-                            <label for="passwordInput" class="form-label">Contraseña</label>
+                            <label for="passwordInput" class="form-label">Contraseña (Debe ser de 8 a 15 caracteres, debe incluir al menos una letra minúscula, una mayúscula, un dígito y un caracter especial)</label>
 
                             <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
                                 id="alert_password">
@@ -116,12 +116,12 @@
                             </div>
                         </div>
                         <input type="password" class="form-control" id="passwordInput"
-                            placeholder="Ingresa la nueva contraseña">
+                            placeholder="Ingresa tu nueva contraseña">
                     </div>
                     <!-- Contraseña Validación -->
                     <div class="mb-5">
                         <div class="d-flex">
-                            <label for="passwordInputVal" class="form-label">Ingresa nuevamente la contraseña</label>
+                            <label for="passwordInputVal" class="form-label">Ingresa nuevamente tu contraseña</label>
 
                             <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
                                 id="alert_passwordVal">
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                         <input type="password" class="form-control" id="passwordInputVal"
-                            placeholder="Ingresa de nuevo la nueva contraseña">
+                            placeholder="Ingresa nuevamente tu contraseña">
                     </div>
 
 
