--- a/loginUsuario.html
+++ b/loginUsuario.html
@@ -44,14 +44,14 @@
             <!--=================== Formulario de registro ===============-->
 
             <div class="columna colForm">
-                <h1 style="text-align: center;">Inicio de sesión de usuario</h1>
+                <h1 style="text-align: center;">¡Inicia sesión!</h1>
 
                 <form class="needs-validation" id="form">
 
                     <!-- Email -->
                     <div class="mb-5">
                         <div class="d-flex">
-                            <label for="emailInputLogin" class="form-label">E-mail</label>
+                            <label for="emailInput" class="form-label">E-mail</label>
 
                             <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
                                 id="alert_email_login">
@@ -59,14 +59,14 @@
                                 <span id="alert_email_txt_login"></span>
                             </div>
                         </div>
-                        <input type="email" class="form-control" id="emailInputLogin"
+                        <input type="email" class="form-control" id="emailInput"
                             placeholder="Ej. correo@example.com" required name="email">
                     </div>
 
                     <!-- Contraseña -->
                     <div class="mb-5">
                         <div class="d-flex">
-                            <label for="passwordInputLogin" class="form-label">Contraseña</label>
+                            <label for="passwordInput" class="form-label">Contraseña</label>
 
                             <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
                                 id="alert_password-login">
@@ -74,7 +74,7 @@
                                 <span id="alert_password_txt_ogin"></span>
                             </div>
                         </div>
-                        <input type="password" class="form-control" id="passwordInputLogin" placeholder="">
+                        <input type="password" class="form-control" id="passwordInput" placeholder="Ingresa tu contraseña">
                     </div>
 
                     <!-- Botón de envío -->
@@ -107,6 +107,8 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
     <script src="./js/Login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
+
 </body>
 
 </html>
