Se agrega validación de usuario registrado para inicio de sesión

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <!-- Logo -->
     <link rel="shortcut icon" href="./src/img/logos/kotomitl3.png" type="image/x-icon">
 
-
 </head>
 
 <body>
@@ -60,7 +59,7 @@
         </section>
         <hr class="featurette-divider">
 
-<h1 class="featurette-heading fw-bold lh-1 text-focus-in">Estilo y orgullo de México</h1>
+        <h1 class="featurette-heading fw-bold lh-1 text-focus-in">Estilo y orgullo de México</h1>
         <hr class="featurette-divider">
         <section class="container">
             <div class="title">
@@ -79,7 +78,8 @@
                         </div>
                         <div class="card-body">
                             <h2 class="fw-normal">Femenina</h2>
-                            <p class="card-text" style="text-align: justify;">Diseños únicos inspirados en el folclor de México. Descubre increíbles vestidos, blusas, accesorios y más.</p>
+                            <p class="card-text" style="text-align: justify;">Diseños únicos inspirados en el folclor de
+                                México. Descubre increíbles vestidos, blusas, accesorios y más.</p>
                         </div>
                         <div class="card-footer border-top-0 text-center">
                             <button type="button" class="btn btn-warning">
@@ -100,7 +100,8 @@
                         </div>
                         <div class="card-body">
                             <h2 class="fw-normal">Infantil</h2>
-                            <p class="card-text" style="text-align: justify;">Amplia variedad de prendas de infantes artesanales, hechas a mano por talentosos artesanos de México.</p>
+                            <p class="card-text" style="text-align: justify;">Amplia variedad de prendas de infantes
+                                artesanales, hechas a mano por talentosos artesanos de México.</p>
                         </div>
                         <div class="card-footer border-top-0 text-center">
                             <button type="button" class="btn btn-warning">
@@ -121,7 +122,8 @@
                         </div>
                         <div class="card-body">
                             <h2 class="fw-normal">Masculina</h2>
-                            <p class="card-text" style="text-align: justify;">Cada prenda es única y está hecha con materiales de alta calidad, lo que garantiza su durabilidad y comodidad.</p>
+                            <p class="card-text" style="text-align: justify;">Cada prenda es única y está hecha con
+                                materiales de alta calidad, lo que garantiza su durabilidad y comodidad.</p>
                         </div>
                         <div class="card-footer border-top-0 text-center">
                             <button type="button" class="btn btn-warning">
@@ -141,12 +143,17 @@
                 <h2 class="featurette-heading fw-bold lh-1 ">Valoramos a nuestras artesanas y artesanos de México.
                     <br>
                 </h2>
-                <p class="">Nuestra página web apoya a los artesanos de México por varias razones. <br>¡Apoyar a los artesanos de México es una forma de apoyar a nuestra comunidad y preservar nuestras raíces culturales!.</p>
+                <p class="">Nuestra página web apoya a los artesanos de México por varias razones. <br>¡Apoyar a los
+                    artesanos de México es una forma de apoyar a nuestra comunidad y preservar nuestras raíces
+                    culturales!.</p>
 
                 <ul style="margin-top:3rem; margin-bottom: 3rem;">
-                    <li style="font-size: 1.6rem;">Creemos que el trabajo de los artesanos es una parte importante de la cultura y la tradición de México.</li>
-                    <li style="font-size: 1.6rem;">Buscamos ayudar a los artesanos a tener un medio para vender sus productos y obtener un ingreso justo por su trabajo.</li>
-                    <li style="font-size: 1.6rem;">Queremos promover el turismo en México al mostrar la belleza y la diversidad de los productos artesanales mexicanos.</li>
+                    <li style="font-size: 1.6rem;">Creemos que el trabajo de los artesanos es una parte importante de la
+                        cultura y la tradición de México.</li>
+                    <li style="font-size: 1.6rem;">Buscamos ayudar a los artesanos a tener un medio para vender sus
+                        productos y obtener un ingreso justo por su trabajo.</li>
+                    <li style="font-size: 1.6rem;">Queremos promover el turismo en México al mostrar la belleza y la
+                        diversidad de los productos artesanales mexicanos.</li>
                 </ul>
             </div>
             <div class="col-md-5">
@@ -166,11 +173,13 @@
                     <br>
                     <br>
                     <br>
-                    <p class="">“Estoy muy agradecido por haber encontrado esta página web para vender mis productos. </p>
+                    <p class="">“Estoy muy agradecido por haber encontrado esta página web para vender mis productos.
+                    </p>
                     <br>
                     <br>
                     <br>
-                    <p>"Desde que empecé a vender aquí, he visto un aumento en mis ventas y he recibido muchos comentarios positivos de los clientes"</p>
+                    <p>"Desde que empecé a vender aquí, he visto un aumento en mis ventas y he recibido muchos
+                        comentarios positivos de los clientes"</p>
                     <br>
                     <br>
                     <br>
@@ -189,6 +198,11 @@
         crossorigin="anonymous"></script>
     <!---JS Nabvar & Footer--->
     <script src="./js/navfooter.js"></script>
+    <!-- Bienvenida al usuario registrado -->
+    <script src="./js/bienvenida.js" defer></script>
+    <!-- Sweetalert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 </body>
 
 </html>
