--- a/nosotros.html
+++ b/nosotros.html
@@ -54,8 +54,9 @@
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
                                 <img src="src/img/nosotros/AlexisSanchez.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded static" alt="Alexis"><img class="active" src="src/img/nosotros/alexis-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded" alt="Alexis">
+                                class="img-fluid rounded static" alt="Alexis">
+                                <!-- <img class="active" src="src/img/nosotros/alexis-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                class="img-fluid rounded" alt="Alexis"> -->
                             </div>
                             <div class="card-body">
                                 <div class="title__card">
@@ -83,8 +84,9 @@
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
                                 <img src="src/img/nosotros/BryanMartinez.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded static" alt="Bryan"><img class="active" src="src/img/nosotros/brayan-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded" alt="Bryan">
+                                class="img-fluid rounded static" alt="Bryan">
+                                <!-- <img class="active" src="src/img/nosotros/brayan-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                class="img-fluid rounded" alt="Bryan"> -->
                             </div>
                             <div class="card-body">
                                 <div class="title__card">
@@ -112,8 +114,9 @@
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
                                 <img src="src/img/nosotros/JuanCarlos.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded static" alt="Carlos"><img class="active" src="src/img/nosotros/juan-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded" alt="Carlos">
+                                class="img-fluid rounded static" alt="Carlos">
+                                <!-- <img class="active" src="src/img/nosotros/juan-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                class="img-fluid rounded" alt="Carlos"> -->
                             </div>
                             <div class="card-body">
                                 <div class="title__card">
@@ -142,8 +145,9 @@
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
                                 <img src="src/img/nosotros/CarlosZepeda.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded static" alt="Ignacio"><img class="active" src="src/img/nosotros/ignacio-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded" alt="Ignacio">
+                                class="img-fluid rounded static" alt="Ignacio">
+                                <!-- <img class="active" src="src/img/nosotros/ignacio-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                class="img-fluid rounded" alt="Ignacio"> -->
                                 <!-- <img src="./src/img/nosotros/CarlosZepeda.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                     class="img-fluid rounded" alt="Ignacio"> -->
@@ -175,8 +179,9 @@
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
                                 <img src="src/img/nosotros/JuanAristeo.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded static" alt="Luis"><img class="active" src="src/img/nosotros/aristeo-normal.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded" alt="Luis">
+                                class="img-fluid rounded static" alt="Luis">
+                                <!-- <img class="active" src="src/img/nosotros/aristeo-normal.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                class="img-fluid rounded" alt="Luis"> -->
                             </div>
                             <div class="card-body">
                                 <div class="title__card">
@@ -204,8 +209,9 @@
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
                                 <img src="src/img/nosotros/RobertoRivas.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded static" alt="Roberto"><img class="active" src="src/img/nosotros/roberto-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded" alt="Roberto">
+                                class="img-fluid rounded static" alt="Roberto">
+                                <!-- <img class="active" src="src/img/nosotros/roberto-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                class="img-fluid rounded" alt="Roberto"> -->
                             </div>
                             <div class="card-body">
                                 <div class="title__card">
