Se corrige responsividad de body, main y footer.

--- a/nosotros.html
+++ b/nosotros.html
@@ -26,7 +26,7 @@
     <header id="navbar"></header>
 
     <!-- ================= CONTENIDO ============== -->
-    <main class="container mb-5">
+    <main class="wrapper">
         <section class="container">
             <div class="title">
                 <h1>Resumen</h1>
@@ -247,7 +247,7 @@
     </main>
 
     <!-- ================= FOOTER ============== -->
-    <footer class="text-center text-lg-center justify-content-center d-flex mt-auto" id="footer"></footer>
+    <footer id="footer"></footer>
 
     <!-- ================= JS ============== -->
     <!--Bootstrap-->
@@ -256,7 +256,7 @@
         crossorigin="anonymous"></script>
 
     <!---JS Nabvar & Footer--->
-    <script src="./js/navfooter.js"></script>
+    <script src="./js/navfooter2.js"></script>
 </body>
 
 </html>
