--- a/productos.html
+++ b/productos.html
@@ -26,8 +26,8 @@
   <header id="navbar"></header>
 
   <!-- ================= CONTENIDO ============== -->
-  <main class="container mb-5">
-    <!-- <section class="container"> -->
+  <main class="wrapper">
+    <section class="container mb-5">
       <button type="button" class="btn btn-outline-primary" id="filt_cat2">Catálogo</button>
       <div class="container-fluid text-center container-products">
         <div class="btn-group" role="group"  id="filtro-superior">
@@ -58,13 +58,10 @@
         </div>
       </div>
     </div>
-
-
-    
-    <!-- </section> -->
+    </section>
   </main>
   <!-- ================= FOOTER ============== -->
-  <footer class="text-center text-lg-center justify-content-center d-flex mt-auto" id="footer"></footer>
+  <footer id="footer"></footer>
 
   <!-- ================= JS ============== -->
   <!--Bootstrap-->
@@ -73,7 +70,7 @@
     crossorigin="anonymous"></script>
 
   <!--JS Nabvar & Footer-->
-  <script src="./js/navfooter.js"></script>
+  <script src="./js/navfooter2.js"></script>
 
   <!-- Productos -->
   <script src="./js/productos2.js"></script>
