--- a/contacto.html
+++ b/contacto.html
@@ -10,10 +10,6 @@
     <!-- css bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <!-- fonts google-->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;600&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&display=swap"
@@ -24,13 +20,13 @@
     <link rel="shortcut icon" href="./src/img/logos/kotomitl3.png" type="image/x-icon">
 </head>
 
-<body class="d-flex flex-column h-100">
+<body>
     <!-- ================= NAVBAR ============== -->
     <header id="navbar"></header>
 
     <!-- ================= CONTENIDO ============== -->
-    <main class="container mb-5">
-        <section class="informacion__seccion text-center">
+    <main class="wrapper">
+        <section class="informacion__seccion text-center container">
             <!--=================== Sección de información ===============-->
             <div class="columna">
                 <h1>Contáctanos</h1>
@@ -59,7 +55,7 @@
 
                     <!-- Nombre -->
                     <div class="mb-5">
-                        <div class="d-flex">
+                        <div class="d-flex" style="width: 95%;">
                             <label for="nombreInput" class="form-label">Nombre</label>
                             <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
                                 id="alert_nombre">
@@ -73,7 +69,7 @@
 
                     <!-- Teléfono -->
                     <div class="mb-5">
-                        <div class="d-flex">
+                        <div class="d-flex" style="width: 95%;">
                             <label for="telInput" class="form-label">Teléfono</label>
                             <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
                                 id="alert_telefono">
@@ -87,7 +83,7 @@
                     </div>
                     <!-- Email -->
                     <div class="mb-5">
-                        <div class="d-flex">
+                        <div class="d-flex" style="width: 95%;">
                             <label for="emailInput" class="form-label">E-mail</label>
 
                             <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
@@ -101,7 +97,7 @@
                     </div>
                     <!-- Mensaje -->
                     <div class="mb-5">
-                        <div class="d-flex">
+                        <div class="d-flex" style="width: 95%;">
                             <label for="msjArea" class="form-label">Mensaje</label>
                             <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
                                 id="alert_mensaje">
@@ -130,7 +126,7 @@
     </main>
 
     <!-- ================= FOOTER ============== -->
-    <footer class="text-center text-lg-center justify-content-center d-flex mt-auto" id="footer"></footer>
+    <footer id="footer"></footer>
 
     <!-- ================= JS ============== -->
     <!--Bootstrap-->
@@ -139,7 +135,7 @@
         crossorigin="anonymous"></script>
 
     <!---JS Nabvar & Footer--->
-    <script src="./js/navfooter.js"></script>
+    <script src="./js/navfooter2.js"></script>
 
     <!-- main -->
     <script src="./js/main.js"></script>
