--- a/loginUsuario.html
+++ b/loginUsuario.html
@@ -1,10 +1,12 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Inicio de sesión</title>
     <!-- iconos bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- css bootstrap -->
@@ -22,88 +24,89 @@
 </head>
 
 <body>
-
-    <!-- ================= CONTENIDO ============== -->
     <header id="navbar"></header>
-    <!-- ================= NAVBAR ============== -->
+    <main class="wrapper">
+        <section class="container">
+            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-xl-2 g-2">
 
-    <main class="container w-100 m-auto">
-        <div class=" form-signin row row-cols-1 row-cols-sm-1 row-cols-md-3 g-3 mt-3 mb-3 justify-content-center">
-            <div class="col" style="width: auto;"></div>
-            <div class="col" style="width: 80%;">
-                <h1 style="text-align: center;">¡Inicia sesión!</h1>
-                <form class="needs-validation" id="form">
-
-
-                    <!-- Email -->
-                    <div class="mb-5">
-                        <div class="d-flex" style="width: 95%;">
-
-                            <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
-                                id="alert_email_login">
-                                <span><i class="bi bi-exclamation-triangle-fill icon__warning"></i></span>
-                                <span id="alert_email_login_txt"></span>
-                            </div>
+                <div class="col" style="margin: 3rem auto;">
+                    <div class="card h-100">
+                        <div class="card-header border-0" style="background-color: white;">
+                            <h2 style="text-align: center;">Inicio de sesión</h2>
                         </div>
-                        <input type="email" class="form-control text-center" id="emailInput" placeholder="correo@example.com"
-                            required name="email">
-                    </div>
+                        <div class="card-body justify-content-center d-flex" style="flex-direction: column; ">
 
-                    <!-- Contraseña -->
-                    <div class="mb-5">
-                        <div class="d-flex" style="width: 95%;">
-                            <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
-                                id="alert_password_login">
-                                <span><i class="bi bi-exclamation-triangle-fill icon__warning"></i></span>
-                                <span id="alert_password_login_txt"></span>
-                            </div>
-                        </div>
-                        <input type="password" class="form-control text-center" id="passwordInput"
-                            placeholder="Ingresa tu contraseña">
-                    </div>
-
-                    <!-- Botón de envío -->
-                    <div class="d-grid gap-2 col-6 mx-auto">
-                        <button type="button" class="btn btn-warning" id="btnEnviar" style="margin: 2rem 0 2rem 0;">
-                            <span>
-                                <i class="bi bi-send icon__send"></i>
+                            <span style="margin: auto; width: 15rem;">
+                                <img src="./src/img/home/login3.png" alt=""
+                                    style="max-width: 100%; max-height: 100%; margin: auto; border-radius: 2%;">
                             </span>
-                            Iniciar sesión </button>
-                    </div>
 
-                    <div class="d-grid gap-2 col-7 mx-auto text-center">
-                        <h3>¿No tienes una cuenta?</h3>
-                        <h3><a class="text-decoration-none" href="./registroUsuario.html"
-                                style="font-size: inherit;">¡Regístrate!</a></h3>
+                            <form class="needs-validation" id="form">
+
+                                <!-- Email -->
+                                <div class="mb-5">
+                                    <div class="d-flex" style="width: 95%;">
+
+                                        <div class="warning__text" style="display:none; color:rgb(186, 3, 3)"
+                                            role="alert" id="alert_email_login">
+                                            <span><i class="bi bi-exclamation-triangle-fill icon__warning"></i></span>
+                                            <span id="alert_email_login_txt"></span>
+                                        </div>
+                                    </div>
+                                    <input type="email" class="form-control text-center" id="emailInput"
+                                        placeholder="correo@example.com" required name="email">
+                                </div>
+
+                                <!-- Contraseña -->
+                                <div class="mb-5">
+                                    <div class="d-flex" style="width: 95%;">
+                                        <div class="warning__text" style="display:none; color:rgb(186, 3, 3)"
+                                            role="alert" id="alert_password_login">
+                                            <span><i class="bi bi-exclamation-triangle-fill icon__warning"></i></span>
+                                            <span id="alert_password_login_txt"></span>
+                                        </div>
+                                    </div>
+                                    <input type="password" class="form-control text-center" id="passwordInput"
+                                        placeholder="Ingresa tu contraseña">
+                                </div>
+
+                                <!-- Botón de envío -->
+                                <div class="d-grid gap-2 col-6 mx-auto">
+                                    <button type="button" class="btn btn-warning" id="btnEnviar"
+                                        style="margin: 2rem 0 2rem 0;">
+                                        <span>
+                                            <i class="bi bi-send icon__send"></i>
+                                        </span>
+                                        Iniciar sesión </button>
+                                </div>
+                            </form>
+                        </div>
+                        <!-- redes sociales -->
+                        <div class="card-footer border-0">
+                            <div class="d-grid gap-2 col-7 mx-auto text-center">
+                                <h5>¿No tienes una cuenta?</h5>
+                                <h5><a class="text-decoration-none" href="./registroUsuario.html"
+                                        style="font-size: inherit;">¡Regístrate!</a></h5>
+                            </div>
+                        </div>
                     </div>
-                </form>
+                </div>
 
             </div>
-            <div class="col" style="width: auto;"></div>
-        </div>
+        </section>
     </main>
-    <!-- ================= FOOTER ============== -->
-    <footer class="text-center text-lg-center justify-content-center d-flex mt-auto" style="position: absolute;"
-        id="footer"></footer>
+    <footer id="footer"></footer>
 
-
-    <!---JS Nabvar & Footer--->
-
-    <script src="./js/navfooter.js"></script>
-
-    <!-- ================= JS ============== -->
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-
+    <!-- Login -->
     <script src="./js/Login.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
-
+    <!-- Nav & Footer -->
+    <script src="./js/navfooter2.js" defer></script>
     <!-- Sweetalert -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
 </body>
 
 </html>
