--- a/template.html
+++ b/template.html
@@ -1,10 +1,12 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Favoritos</title>
     <!-- iconos bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- css bootstrap -->
@@ -22,23 +24,22 @@
 </head>
 
 <body>
-    <!-- ================= NAVBAR ============== -->
     <header id="navbar"></header>
+    <main class="wrapper">
+        <section class="container"></section>
+    </main>
+    <footer id="footer"></footer>
 
-    <!-- ================= CONTENIDO ============== -->
-    <main class="container mb-5"></main>
-
-    <!-- ================= FOOTER ============== -->
-    <footer class="text-center text-lg-center justify-content-center d-flex mt-auto" id="footer"></footer>
-
-    <!-- ================= JS ============== -->
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-
-    <!---JS Nabvar & Footer--->
-    <script src="./js/navfooter.js"></script>
+    <!-- Login -->
+    <script src="./js/Login.js"></script>
+    <!-- Nav & Footer -->
+    <script src="./js/navfooter2.js" defer></script>
+    <!-- Sweetalert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 
 </html>
